--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,10 +9,13 @@
   box-sizing: border-box;
 }
 
-
 /* Apply to full viewport */
-html, body, #root {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+html,
+body,
+#root {
+  font-family:
+    -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial,
+    sans-serif;
   color: #111;
   background-color: #2c1a4f;
   line-height: 1.5;
@@ -31,15 +34,15 @@ body {
 }
 
 @font-face {
-  font-family: 'Adrenaline';
-  src: url('./assets/fonts/AdrenalineHitItalic.ttf') format('truetype');
+  font-family: "Adrenaline";
+  src: url("./assets/fonts/AdrenalineHitItalic.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'Bulletproof';
-  src: url('./assets/fonts/Bulletproof.ttf') format('truetype');
+  font-family: "Bulletproof";
+  src: url("./assets/fonts/Bulletproof.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
